corrected calculation methods having cross-checked with spreadsheet, changed font and added popovers and modals for extra info

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+h1, h2 {
+	font-family: "Dosis";
+}
+
+label {
+	font-family: "Inconsolata";
+}
+
+input {
+	font-family: "Inconsolata";
+}
+
 /*    width:250px;
     height:290px;
         background-color:orange; 
