--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ label, h4 {
 
 input {
 	font-family: "Inconsolata";
+	z-index: -10;
 }
 
 .well {
@@ -32,6 +33,10 @@ head, body {
 
 .jumbotron {
 		background-color: white;
+}
+
+.modal {
+	z-index: 10;
 }
 
 /*    width:250px;
