Switched to JQuery UI Slider and added example cases on first load

--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ head, body {
 	font-family: "Inconsolata";
 }
 
+/*.row {
+	border: 3px solid red;
+}
+
 /*    width:250px;
     height:290px;
         background-color:orange; 
